force-app/main/default/objects/df_160_arveafkald_sub__c/df_160_arveafkald_sub__c.object-meta.xml
<CustomObject>
    <label>Arveafkald</label>
    <nameField>
        <label>Arveafkald Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Arveafkalds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>