force-app/main/default/objects/df_160_arveafkald_sub__c/fields/arveafkald_fra_en_eller_to__c.field-meta.xml
<CustomField>
    <fullName>arveafkald_fra_en_eller_to__c</fullName>
    <label>Gives der arveafkald fra en elle f6cf7</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>arveafkald_fra_en</fullName>
                <label>Arveafkald fra én person</label>
            </value>
            <value>
                <fullName>arveafkald_fra_to</fullName>
                <label>Arveafkald fra to personer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>