force-app/main/default/objects/df_160_arveafkald_sub__c/fields/blankt_arveafkald_picklist__c.field-meta.xml
<CustomField>
    <fullName>blankt_arveafkald_picklist__c</fullName>
    <label>Blankt arveafkald</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>blankt_arveafkald_ja</fullName>
                <label>Ja, blankt arveafkald</label>
            </value>
            <value>
                <fullName>blankt_arveafkald_nej</fullName>
                <label>Nej, arv skal gå videre til livsarvinger</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>