force-app/main/default/objects/df_160_arveafkald_sub__c/fields/vlg_arveafkald_giver__c.field-meta.xml
<CustomField>
    <fullName>vlg_arveafkald_giver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vælg personen der giver arveafka 0ed1e</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>vlg_arveafkald_giver</relationshipLabel>
    <relationshipName>vlg_arveafkald_giver</relationshipName>
    <type>Lookup</type>
</CustomField>