force-app/main/default/objects/df_160_arveafkald_sub__c/fields/vlg_person_ingen_arv_1__c.field-meta.xml
<CustomField>
    <fullName>vlg_person_ingen_arv_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vælg person, der ikke skal modta 66e0a</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>vlg_person_ingen_arv_1</relationshipLabel>
    <relationshipName>vlg_person_ingen_arv_1</relationshipName>
    <type>Lookup</type>
</CustomField>