force-app/main/default/objects/df_160_arveafkald_sub__c/fields/vlg_person_ingen_arv_2__c.field-meta.xml
<CustomField>
    <fullName>vlg_person_ingen_arv_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vælg den anden person, der ikke  3fda4</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>vlg_person_ingen_arv_2</relationshipLabel>
    <relationshipName>vlg_person_ingen_arv_2</relationshipName>
    <type>Lookup</type>
</CustomField>